--- a/style/base.css
+++ b/style/base.css
@@ -247,7 +247,6 @@
   position: absolute;
   background: var(--jp-accent-color3);
   overflow: hidden;
-  opacity: 0.8;
   border: 1.5px solid var(--jp-border-color3);
   display: flex;
   align-items: center;
@@ -258,11 +257,19 @@
 }
 
 .up-ProfileTrace-frame:hover {
-  opacity: 1;
+  background: var(--jp-accent-color2);
+}
+
+.up-ProfileTrace-frame-native:hover {
+  background: var(--jp-brand-color2);
 }
 
 .up-ProfileTrace-sample {
-  overflow: hidden;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  pointer-events: none;
+  border-left: 2px dotted var(--jp-content-font-color3);
 }
 
 .up-BenchmarkLauncher-launchbar {
